added info in index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 Sasha Ponomar
+"About"
+
+"Former professional hockey player and coach, fluent in English and now trying to make team Ukraine as a software engineer"
+
+"Experience"
+
+As a hockey player https://www.eliteprospects.com/player/115587/alexander-ponomar
+
+As a hockey coach - youth hockey school HC "Kramatorsk" since 2018.
+
+Add the phrase "Connect"
+email: alvipon@gmail.com
+GitHub: https://github.com/OleksandrPonomar
+facebook: https://www.facebook.com/oleksandr.ponomar
+Linkedin: https://www.linkedin.com/in/oleksandr-ponomar-87171423b/
+
