--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Sasha Ponomar
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Portfolio</title>
+    </head>
+    <body>
+        <h1>Sasha Ponomar</h1>
+        <section>
+            <h1>"About"</h1>
+            <p>"Former professional hockey player and coach, fluent in English and now trying to make team Ukraine as a software engineer"</p>
+        </section>
+        <section>
+            <h1>"Experience"</h1>
+            <p>
+            As a hockey player <a href="https://www.eliteprospects.com/player/115587/alexander-ponomar">Player stats</a> </p>
+            <p>
+As a hockey coach - youth hockey school HC "Kramatorsk" since 2018.</p>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+                <ul>
+
+                </ul>
+        </section>
+        <section>
+            <h1>"Connect"</h1> 
+            <ul>
+                <li>email: <a href="mailto:alvipon@gmail.com">alvipon@gmail.com</a></li>
+                <li><a href="https://github.com/OleksandrPonomar">GitHub</a></li>
+                <li> <a href="https://www.facebook.com/oleksandr.ponomar">Facebook</a></li>
+                <li> <a href="https://www.linkedin.com/in/oleksandr-ponomar-87171423b/">Linkedin</a>  </li>
+            </ul>
+        </section>
+        <footer></footer>
+        <script src="js/index.js"></script>
+    </body>
+</html>
